<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_every"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:text="@string/repeat_week"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_weekend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="273dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.037">


        <CheckBox
            android:id="@+id/mon"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:gravity="center"
            android:text="@string/repeat_mon"
            android:textAlignment="center"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/tue"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:gravity="center"
            android:text="@string/repeat_tue"
            android:textAlignment="center"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/wed"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:gravity="center"
            android:text="@string/repeat_wed"
            android:textAlignment="center"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/thu"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:gravity="center"
            android:text="@string/repeat_thu"
            android:textAlignment="center"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/fri"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:gravity="center"
            android:text="@string/repeat_fri"
            android:textAlignment="center"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/sat"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:gravity="center"
            android:text="@string/repeat_sat"
            android:textAlignment="center"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/sun"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:gravity="center"
            android:text="@string/repeat_sun"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="329dp"
        android:layout_height="53dp"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.517" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>