<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">



       <EditText
           android:id="@+id/editText1"
           android:layout_width="363dp"
           android:layout_height="39dp"
           android:text="Title Input"
           android:ems="10"
           android:inputType="textPersonName"
           tools:ignore="MissingConstraints" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="291dp"
        android:layout_height="223dp"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

    <Button
        android:id="@+id/button_repeat"
        android:layout_width="347dp"
        android:layout_height="52dp"
        android:text="@string/alarm_repeat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/button_sound"
        android:layout_width="347dp"
        android:layout_height="52dp"
        android:text="@string/alarm_sound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_repeat"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="347dp"
        android:layout_height="52dp"
        android:text="@string/alarm_save"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sound"
        app:layout_constraintVertical_bias="0.098" />


</androidx.constraintlayout.widget.ConstraintLayout>